Add home page with necessery html css js and picture

--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -1,1 +1,329 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+
+    <title>Online Exam Management System</title>
+    
+    <!-- Bootstrap core CSS -->
+    <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Additional CSS Files -->
+    <!-- <link rel="stylesheet" href="assets/css/fontawesome.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/oems.css"> -->
+
+  </head>
+
+<body>
+
+   
+  <!--header-->
+  <header class="main-header clearfix" role="header">
+    <div class="logo">
+      <a href="#"><em ><img class="logo-image" src="../assets/images/logo.png" alt="Submit" width="100" height="100"> OEMS</em></a>
+    </div>
+    <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
+    <nav id="menu" class="main-nav" role="navigation">
+      <ul class="main-menu">
+        <li><a href="#section1">Home</a></li>
+        <li class="has-submenu"><a href="#section2">About Us</a>
+          <ul class="sub-menu">
+            <li><a href="#section2">About OEMS</a></li>
+            <li><a href="#section3">Developer</a></li>
+          </ul>
+        </li>
+        <li><a href="#section4">FAQ</a></li>
+        <li><a href="#section6">Contact</a></li>
+        <li><a href="">T&C</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- ***** Main Banner Area Start ***** -->
+  <section class="section main-banner" id="top" data-section="section1">
+      <img src="../assets/images/courses-video.png" width="100%">
+
+      <div class="video-overlay header-text">
+          <div class="caption">
+              <h6>online Exam Management System</h6>
+              <h2><em>Prepare</em> Yourself</h2>
+              <div class="main-button">
+                  <div class="scroll-to-section"><a href="">Log in</a>
+                                                <a href="">Register</a></div>  
+            </div>
+          </div>
+      </div>
+  </section>
+  <!-- ***** Main Banner Area End ***** -->
+
+
+  <section class="features">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-12">
+          <div class="features-post">
+            <div class="features-content">
+              <div class="content-show">
+                <h4><i class="fa fa-pencil"></i>All Department</h4>
+              </div>
+              <div class="content-hide">
+                <p>&#x2022;Computer Science<br>&#x2022;Business Studies<br>&#x2022;Low and Justies<br>&#x2022;Mathematics<br>&#x2022;English</p>
+                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-12">
+          <div class="features-post second-features">
+            <div class="features-content">
+              <div class="content-show">
+                <h4><i class="fa fa-graduation-cap"></i>Features</h4>
+              </div>
+              <div class="content-hide">
+                <p>Online MCQ and Form based Exam, Review facilities, request for new courses, Personal dashboard.</p>
+                <p class="hidden-sm">Curabitur id eros vehicula, tincidunt libero eu, lobortis mi. In mollis eros a posuere imperdiet.</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-12">
+          <div class="features-post third-features">
+            <div class="features-content">
+              <div class="content-show">
+                <h4><i class="fa fa-book"></i>Todays Quote</h4>
+              </div>
+              <div class="content-hide">
+                <p>"Some of the brightest minds in the country can be found on the last banches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
+                <p class="hidden-sm">"Some of the brightest minds in the country can be found on the last banches of the classroom."<br><em>-Dr. APJ Abdul Kalam</em></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section why-us" data-section="section2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>Why You Use Our Online Exam Management System?</h2>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div id='tabs'>
+            <ul>
+              <li><a href='#tabs-1'>Qualified Teacher's</a></li>
+              <li><a href='#tabs-2'>Best Judge Panel</a></li>
+              <li><a href='#tabs-3'>Student Friendly Interface</a></li>
+            </ul>
+            <section class='tabs-content'>
+              <article id='tabs-1'>
+                <div class="row">
+                  <div class="col-md-6">
+                    <img src="../assets/images/choose-us-image-01.png" alt="">
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Qualified Teacher's</h4>
+                    <p>You will find here world class top qualifyed teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
+                  </div>
+                </div>
+              </article><br>
+              <article id='tabs-2'>
+                <div class="row">
+                  <div class="col-md-6">
+                    <img src="../assets/images/choose-us-image-02.png" alt="">
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Best Judge Panel</h4>
+                    <p>A best judge pannel can give you the the perfect result.For this reason we use best judge panel. So that you can get best accurate result. <br> Also their have fecility to request for <a href="">re-judge</a> of your result. We think never you use that because we ar perfect.</p>
+                  </div>
+                </div>
+              </article><br>
+              <article id='tabs-3'>
+                <div class="row">
+                  <div class="col-md-6">
+                    <img src="../assets/images/choose-us-image-03.png" alt="">
+                  </div>
+                  <div class="col-md-6">
+                    <h4>Student Friendly Interface</h4>
+                    <p>Your did not have any tansion to learn this system from sketch. It will very friendly environment to learn full of its features. It will offer you very smooth and fast respond feature.</p>
+                  </div>
+                </div>
+              </article>
+            </section>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section video" data-section="section3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 align-self-center">
+          <div class="left-content">
+            <span></span>
+            <h4>Behind of the project<br><em>Who spand their valuable time</em></h4>
+          
+            <br>
+            <div>
+              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-1/309678270_4146596015565800_7623435530379665711_n.jpg?stp=c0.0.160.160a_dst-jpg_p160x160&_nc_cat=103&ccb=1-7&_nc_sid=7206a8&_nc_ohc=OLhXT00qKLoAX__RSmK&_nc_ht=scontent.fdac7-1.fna&oh=00_AfAPWHK6YKRDy67SdfXklnqkCo-ZuAu0k-IdpgCxRx-4bQ&oe=63AC1A92" alt="" width="100" height="100">
+            
+              <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
+              <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
+            </div>
+            <div>
+              <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/313345198_3306731552925941_5704445586028302330_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SYAcx2G_ol0AX_uJT1y&_nc_ht=scontent.fdac7-1.fna&oh=00_AfBoKqtpvnS5iAqQqciXKxKnS_xqJmwd7KByNaS626so6g&oe=63AB0DE0" alt="" width="100" height="100">
+            
+              <h5><a href="https://www.linkedin.com/in/sourav-das-9b988923a/" target="_blank" rel="noopener noreferrer">Sourav Das</a></h5>
+              <p>Student at Department of CSE, SEU<br>ML Expart</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <article class="video-item">
+            <div class="video-caption">
+              <h4>Friendship Forever</h4>
+            </div>
+            <figure>
+              <a href="https://www.youtube.com/watch?v=r9LtOG6pNUw" class="play"><img src="../assets/images/main-thumb.png"></a>
+            </figure>
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section contact" data-section="section4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>Use This Massege Box to contact with us</h2>
+            <h2>OR</h2>
+            <h2>admins.oems@gmail.com</h2>
+          </div>
+          
+        </div>
+        <div class="col-md-6">
+          <form id="contact" action="" method="post">
+            <div class="row">
+              <div class="col-md-6">
+                  <fieldset>
+                    <input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required="">
+                  </fieldset>
+                </div>
+                <div class="col-md-6">
+                  <fieldset>
+                    <input name="email" type="text" class="form-control" id="email" placeholder="Your Email" required="">
+                  </fieldset>
+                </div>
+              <div class="col-md-12">
+                <fieldset>
+                  <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..." required=""></textarea>
+                </fieldset>
+              </div>
+              <div class="col-md-12">
+                <fieldset>
+                  <button type="submit" id="form-submit" class="button">Send Message Now</button>
+                </fieldset>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-md-6"  >
+          <div id="map" style="color:white;text-align: right;">
+            <h3>Development Language:</h3>
+            <br>
+            <h5>Front End Build with:</h5>
+            <p>Angular, Html, CSS, JavaScript</p>
+            <br>
+            <h5>Backend Built with:</h5>
+            <p>Java, Spring Boot, Thymeleaf, JDBC,<br> JWT, Spring Security, restfull API's,<br>maintain MVC design pattern</p>
+            <br>
+            <h5>Databases:</h5>
+            <p>MYSQL</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p><i class="fa fa-copyright"></i> Copyright 2022 by OEMS Team </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    
+    <script src="../assets/js/tabs.js"></script>
+    <script src="../assets/js/custom.js"></script>
+    <script src="../assets/js/navbar.js"></script>
+    <script>
+        //according to loftblog tut
+        $('.nav li:first').addClass('active');
+
+        var showSection = function showSection(section, isAnimate) {
+          var
+          direction = section.replace(/#/, ''),
+          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+          reqSectionPos = reqSection.offset().top - 0;
+
+          if (isAnimate) {
+            $('body, html').animate({
+              scrollTop: reqSectionPos },
+            800);
+          } else {
+            $('body, html').scrollTop(reqSectionPos);
+          }
+
+        };
+
+        var checkSection = function checkSection() {
+          $('.section').each(function () {
+            var
+            $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+            if (topEdge < wScroll && bottomEdge > wScroll) {
+              var
+              currentId = $this.data('section'),
+              reqLink = $('a').filter('[href*=\\#' + currentId + ']');
+              reqLink.closest('li').addClass('active').
+              siblings().removeClass('active');
+            }
+          });
+        };
+
+        $('.main-menu, .scroll-to-section').on('click', 'a', function (e) {
+          if($(e.target).hasClass('external')) {
+            return;
+          }
+          e.preventDefault();
+          $('#menu').removeClass('active');
+          showSection($(this).attr('href'), true);
+        });
+
+        $(window).scroll(function () {
+          checkSection();
+        });
+    </script>
+</body>
+</html>
