--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -120,12 +120,12 @@
         <div class="col-md-12">
           <div id='tabs'>
             <ul>
-              <li><a href='#tabs-1'>Qualified Teacher's</a></li>
+              <li><a href='#tabs-1' >Qualified Teacher's</a></li>
               <li><a href='#tabs-2'>Best Judge Panel</a></li>
               <li><a href='#tabs-3'>Student Friendly Interface</a></li>
             </ul>
             <section class='tabs-content'>
-              <article id='tabs-1'>
+              <article id='tabs-1' >
                 <div class="row">
                   <div class="col-md-6">
                     <img src="../assets/images/choose-us-image-01.png" alt="">
@@ -135,7 +135,7 @@
                     <p>You will find here world class top qualifyed teacher from DU, BUET, JU. They have curiosity.This curiosity leads to an awareness of the challenges facing students in their own communities - especially those communities that are vulnerable in nature.</p>
                   </div>
                 </div>
-              </article><br>
+              </article>
               <article id='tabs-2'>
                 <div class="row">
                   <div class="col-md-6">
@@ -146,7 +146,7 @@
                     <p>A best judge pannel can give you the the perfect result.For this reason we use best judge panel. So that you can get best accurate result. <br> Also their have fecility to request for <a href="">re-judge</a> of your result. We think never you use that because we ar perfect.</p>
                   </div>
                 </div>
-              </article><br>
+              </article>
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
