--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <title>Online Exam Management System</title>
-    
+
     <!-- Bootstrap core CSS -->
     <!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 
@@ -22,31 +22,12 @@
 
 <body>
 
-   
-  <!--header-->
-  <header class="main-header clearfix" role="header">
-    <div class="logo">
-      <a href="#"><em ><img class="logo-image" src="../assets/images/logo.png" alt="Submit" width="100" height="100"> OEMS</em></a>
-    </div>
-    <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
-    <nav id="menu" class="main-nav" role="navigation">
-      <ul class="main-menu">
-        <li><a href="#section1">Home</a></li>
-        <li class="has-submenu"><a href="#section2">About Us</a>
-          <ul class="sub-menu">
-            <li><a href="#section2">About OEMS</a></li>
-            <li><a href="#section3">Developer</a></li>
-          </ul>
-        </li>
-        <li><a href="#section4">FAQ</a></li>
-        <li><a href="#section6">Contact</a></li>
-        <li><a href="">T&C</a></li>
-      </ul>
-    </nav>
-  </header>
+
 
   <!-- ***** Main Banner Area Start ***** -->
+  <!-- <app-faq></app-faq> -->
   <section class="section main-banner" id="top" data-section="section1">
+    <router-outlet></router-outlet>
       <img src="../assets/images/courses-video.png" width="100%">
 
       <div class="video-overlay header-text">
@@ -55,7 +36,7 @@
               <h2><em>Prepare</em> Yourself</h2>
               <div class="main-button">
                   <div class="scroll-to-section"><a href="">Log in</a>
-                                                <a href="">Register</a></div>  
+                                                <a href="">Register</a></div>
             </div>
           </div>
       </div>
@@ -109,7 +90,7 @@
     </div>
   </section>
 
-  <section class="section why-us" data-section="section2">
+  <section class="section why-us" id="section2">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -165,24 +146,24 @@
     </div>
   </section>
 
-  <section class="section video" data-section="section3">
+  <section class="section video" id="section3">
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-self-center">
           <div class="left-content">
             <span></span>
             <h4>Behind of the project<br><em>Who spand their valuable time</em></h4>
-          
+
             <br>
             <div>
               <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-1/309678270_4146596015565800_7623435530379665711_n.jpg?stp=c0.0.160.160a_dst-jpg_p160x160&_nc_cat=103&ccb=1-7&_nc_sid=7206a8&_nc_ohc=OLhXT00qKLoAX__RSmK&_nc_ht=scontent.fdac7-1.fna&oh=00_AfAPWHK6YKRDy67SdfXklnqkCo-ZuAu0k-IdpgCxRx-4bQ&oe=63AC1A92" alt="" width="100" height="100">
-            
+
               <h5><a href="https://www.linkedin.com/in/bindanabendu/" target="_blank" rel="noopener noreferrer">Nabendu Bikash Binda</a></h5>
               <p>Student at Department of CSE, SEU <br> Competitive Programmer<br> Problem Solver</p><br>
             </div>
             <div>
               <img style="float: left; padding:8px;" src="https://scontent.fdac7-1.fna.fbcdn.net/v/t39.30808-6/313345198_3306731552925941_5704445586028302330_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=SYAcx2G_ol0AX_uJT1y&_nc_ht=scontent.fdac7-1.fna&oh=00_AfBoKqtpvnS5iAqQqciXKxKnS_xqJmwd7KByNaS626so6g&oe=63AB0DE0" alt="" width="100" height="100">
-            
+
               <h5><a href="https://www.linkedin.com/in/sourav-das-9b988923a/" target="_blank" rel="noopener noreferrer">Sourav Das</a></h5>
               <p>Student at Department of CSE, SEU<br>ML Expart</p>
             </div>
@@ -202,7 +183,7 @@
     </div>
   </section>
 
-  <section class="section contact" data-section="section4">
+  <section class="section contact" id="section4">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -211,7 +192,7 @@
             <h2>OR</h2>
             <h2>admins.oems@gmail.com</h2>
           </div>
-          
+
         </div>
         <div class="col-md-6">
           <form id="contact" action="" method="post">
@@ -271,7 +252,7 @@
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    
+
     <script src="../assets/js/tabs.js"></script>
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/navbar.js"></script>
