--- a/src/app/all-component/public/home/home.component.css
+++ b/src/app/all-component/public/home/home.component.css
@@ -68,6 +68,7 @@ p {
     font-weight: 700;
     padding: 12px 20px;
     display: inline-block;
+    margin: 5px;
     outline: none;
 }
 
@@ -688,29 +689,6 @@ footer p a:hover {
   .features-post { border-left: 0 }
 }
 
-@media screen and (max-width: 950px) {
-  .main-menu { padding-right: 0!important; }
-  .main-header .logo {
-    line-height: 73px;
-  }
-  .main-menu li {
-    display: block;
-    line-height: 1;
-    margin-left: 0 !important;
-  }
-
-  .main-menu li .sub-menu {
-    opacity: 1;
-    visibility: visible;
-    position: static;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-  }
-  .main-menu li .sub-menu li:last-child {
-    border-bottom: 1px solid rgba(250,250,250,0.25);
-  }
-}
 
 @media screen and (max-width: 950px) and (max-height: 400px) {
   nav[role="navigation"].active {
