--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.css
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.css
@@ -18,22 +18,25 @@ a {
     margin-left: 5px!important;
   }
 }
-
+.main-header img{
+  padding-right:7px;
+}
 
 .main-header {
   background-color: rgba(22,34,57,0.95);
-  height: 60px;
+  height: 73px;
   position: fixed;
   z-index: 12;
   width: 100%;
   top: 0;
   border-bottom:thin solid #0399FF;
+
 }
 
 .main-header .logo {
   float: left;
   line-height: 80px;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 .main-header .logo a {
@@ -45,12 +48,16 @@ a {
 .main-header .logo a em {
   font-style: normal;
   color: #0399FF;
+  display: flex;
+  letter-spacing:1px;
+
+
 }
 
 .main-menu {
   float: right;
   padding-right: 30px;
-  margin-top:-7px;
+  margin-top:-1px;
 }
 
 .main-menu li {
@@ -143,6 +150,30 @@ a {
     border-bottom: 1px solid rgba(250,250,250,0.25);
   }
 }
+@media screen and (max-width: 950px) {
+  .main-menu { padding-right: 0!important; }
+  .main-header .logo {
+    line-height: 73px;
+  }
+  .main-menu li {
+    display: block;
+    line-height: 1;
+    margin-left: 0 !important;
+  }
+
+  .main-menu li .sub-menu {
+    opacity: 1;
+    visibility: visible;
+    position: static;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .main-menu li .sub-menu li:last-child {
+    border-bottom: 1px solid rgba(250,250,250,0.25);
+  }
+}
+
 /* logo image shirink */
 .logo-image{
   transition: 1s;
