--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -35,8 +35,8 @@
               <h6>online Exam Management System</h6>
               <h2><em>Prepare</em> Yourself</h2>
               <div class="main-button">
-                  <div class="scroll-to-section"><a href="">Log in</a>
-                                                <a href="">Register</a></div>
+                  <div class="scroll-to-section"><a href="public-dashboard/login">Log in</a>
+                                                <a href="register">Register</a></div>
             </div>
           </div>
       </div>
