--- a/src/app/all-component/public/home/home.component.html
+++ b/src/app/all-component/public/home/home.component.html
@@ -36,7 +36,7 @@
               <h2><em>Prepare</em> Yourself</h2>
               <div class="main-button">
                   <div class="scroll-to-section"><a href="public-dashboard/login">Log in</a>
-                                                <a href="register">Register</a></div>
+                                                <a href="public-dashboard/register">Register</a></div>
             </div>
           </div>
       </div>
