--- a/src/app/all-component/public/registration/registration.component.css
+++ b/src/app/all-component/public/registration/registration.component.css
@@ -29,7 +29,7 @@ button{
 }
 body{
   padding-top: 130px;
-  background-image: url(../home/assets/images/choosing-bg.jpg);
+  background-image: url(../../../../assets/images/choosing-bg.jpg);
 
 }
 .example-full-width{
@@ -44,3 +44,4 @@ mat-radio-group{
 .signup{
   width: 99%;
 }
+
