--- a/src/app/all-component/public/public-dashboard/public-dashboard.component.html
+++ b/src/app/all-component/public/public-dashboard/public-dashboard.component.html
@@ -1,23 +1,23 @@
-<body>
+
 <!--header-->
   <header class="main-header" role="header">
     <div class="logo">
       <a routerLink="home"><em><img class="logo-image" src="../assets/images/logo.png" alt="Submit" width="75" height="75">
          OEMS</em></a>
     </div>
-    <a href="#menu" class="menu-link"><i class="fa fa-bars"></i></a>
+    <a href="#menu" class="menu-link"></a>
     <nav id="menu" class="main-nav" role="navigation">
       <ul class="main-menu">
-        <li><a routerLink="home" href="#top">Home</a></li>
+        <li><a href="#top">Home</a></li>
         <li class="has-submenu"><a>About Us</a>
           <ul class="sub-menu" >
-            <li><a routerLink="home" href="#section2">About OEMS</a></li>
-            <li><a routerLink="home" href="#section3">Developer</a></li>
+            <li><a href="#section2">About OEMS</a></li>
+            <li><a href="#section3">Developer</a></li>
           </ul>
         </li>
-        <li><a routerLink="faq">FAQ</a></li>
-        <li><a routerLink="home" href="#section4">Contact</a></li>
-        <li><a routerLink="t&c" >T&C</a></li>
+        <li><a routerLink="public-dashboard/faq">FAQ</a></li>
+        <li><a href="#section4">Contact</a></li>
+        <li><a routerLink="public-dashboard/t&c" >T&C</a></li>
       </ul>
     </nav>
   </header>
@@ -25,5 +25,5 @@
 
 <!--  <app-home></app-home>-->
   <router-outlet></router-outlet>
-</body>
+
 
