fix image change of friends

--- a/src/app/all-component/public/tnc/tnc.component.css
+++ b/src/app/all-component/public/tnc/tnc.component.css
@@ -3,6 +3,6 @@
   color: white;
 }
 .body-class{
-  background-image: url(../home/assets/images/choosing-bg.jpg);
+  background-image: url(/../../../../assets/images/choosing-bg.jpg);
   background-color: #172238;
 }
