--- a/src/app/all-component/public/registration/registration.component.css
+++ b/src/app/all-component/public/registration/registration.component.css
@@ -44,4 +44,7 @@ mat-radio-group{
 .signup{
   width: 99%;
 }
+::ng-deep mat-radio-group mat-radio-button .radio_button {
+  color: #556EE6 !important;
+}
 
