--- a/src/app/all-component/public/registration/registration.component.html
+++ b/src/app/all-component/public/registration/registration.component.html
@@ -17,23 +17,24 @@
 
       <mat-form-field class="example-full-width">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Your Username" ngModel required name = "usernames">
+        <input matInput placeholder="---@gmail.com" ngModel required name = "usernames">
       </mat-form-field>
 
       <mat-form-field class="example-full-width ">
         <mat-label >Contact Number</mat-label>
-        <input matInput placeholder="Your Username" ngModel required name = "usernames">
+        <input matInput placeholder="+8801--" ngModel required name = "usernames">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Birth Reg No or NID</mat-label>
-        <input  type='Password' matInput placeholder="Your Password" name = "Password" ngModel required>
+        <input  type='Password' matInput placeholder="NID-Number" name = "Password" ngModel required>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Date-of-Birth</mat-label>
         <input  type='Password' matInput placeholder="DD-MM-YYY" name = "Password" ngModel required>
       </mat-form-field>
-      <mat-radio-group aria-label="Gander" >
+        <mat-radio-group aria-label="Gander" >
+
         <mat-label>Gender</mat-label><br>
         <mat-radio-button value="1">Male</mat-radio-button>
         <mat-radio-button value="2">Female</mat-radio-button>
@@ -41,11 +42,11 @@
       </mat-radio-group>
       <mat-form-field class="example-full-width">
         <mat-label>Department</mat-label>
-        <input  type='Password' matInput placeholder="Your Password" name = "Password" ngModel required>
+        <input  type='Password' matInput placeholder="CSE" name = "Password" ngModel required>
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Semester</mat-label>
-        <input  type='Password' matInput placeholder="Your Password" name = "Password" ngModel required>
+        <input  type='Password' matInput placeholder="1st" name = "Password" ngModel required>
       </mat-form-field>
       <mat-form-field class="example-full-width">
       <mat-label>Password</mat-label>
