add apis of login t&c faq

--- a/src/app/all-component/public/faq/faq.component.html
+++ b/src/app/all-component/public/faq/faq.component.html
@@ -1,3 +1,4 @@
 <body class="body-class">
-  <h1 class="tt">faq works!</h1>
+  <h1 class="tt">Frequently Ask Question?</h1>
+  <h1 >{{f}}</h1>
 </body>
